--- a/ihm_front/ihm_javascript/resources/styles.css
+++ b/ihm_front/ihm_javascript/resources/styles.css
@@ -15,8 +15,8 @@ body {
 
 /* Estiliza o SVG */
 svg {
-  width: 80vw;
-  height: 80vh;
+  width: 60vw;
+  height: 60vh;
 }
 
 /* Estiliza os botões */
@@ -39,26 +39,28 @@ button {
 
 /* Estiliza os gráficos */
 .graficos {
-  position: absolute;
+  display: flex;
+  justify-content: space-around;
   width: 100%;
+  margin-top: 10px;
 }
 
-/* Exemplo de um gráfico posicionado na parte superior esquerda */
+/* Indicador 1 */
 .grafico1 {
   position: absolute;
-  top: -100px; /* Ajuste baseado no DevTools */
-  left: 300px; /* Ajuste baseado no DevTools */
-  width: 80px;
-  height: 60px;
+  top: 200px;
+  left: 550px;
+  width: 100px;
+  height: 400px; /* Ajustando altura para ser próxima ao desenho */
 }
 
-/* Exemplo de um gráfico posicionado no canto inferior direito */
+/* Historico Variável */
 .grafico2 {
   position: absolute;
-  top: 400px; /* Ajuste baseado no DevTools */
-  left: 1700px; /* Ajuste baseado no DevTools */
-  width: 100px;
-  height: 80px;
+  top: 800px; /* Ajuste baseado no DevTools */
+  left: 1600px; /* Ajuste baseado no DevTools */
+  width: 400px;
+  height: 200px;
 }
 
 /* Ajuste para todos os gráficos */
